--- a/ClientsManager.WebAPI/appsettings.json
+++ b/ClientsManager.WebAPI/appsettings.json
@@ -1,9 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+        "Default": "Error",
+        "Microsoft": "Warning"
+    },
+    "Debug": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.Hosting":  "Trace"
+        }
     }
   },
     "AllowedHosts": "*"
