--- a/ClientsManager.Data/ClientsManager.Data.csproj
+++ b/ClientsManager.Data/ClientsManager.Data.csproj
@@ -5,6 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200628000746_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200628000746_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200716031219_Added-Employee-EmployeeType.cs" />
+    <Compile Remove="Migrations\20200716031219_Added-Employee-EmployeeType.Designer.cs" />
+    <Compile Remove="Migrations\20200716031846_InitialMigration.cs" />
+    <Compile Remove="Migrations\20200716031846_InitialMigration.Designer.cs" />
+    <Compile Remove="Migrations\20200716034139_Modified_Relationship_Data.cs" />
+    <Compile Remove="Migrations\20200716034139_Modified_Relationship_Data.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
