--- a/ClientsManager.Data/ClientsManager.Data.csproj
+++ b/ClientsManager.Data/ClientsManager.Data.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\ClientsManager.Models\ClientsManager.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
+
 </Project>
