--- a/ClientsManager.WebAPI/appsettings.json
+++ b/ClientsManager.WebAPI/appsettings.json
@@ -1,15 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-        "Default": "Error",
-        "Microsoft": "Warning"
-    },
-    "Debug": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.Hosting":  "Trace"
+    "Logging": 
+    {
+        "LogLevel": 
+        {
+            "Default": "Error",
+            "Microsoft": "Warning"
+        },
+        "Debug": 
+        {
+            "LogLevel": 
+            {
+                "Default": "Information",
+                "Microsoft.Hosting": "Trace"
+            }
         }
-    }
-  },
+    },
     "AllowedHosts": "*"
 }
