Added Serilog Logging

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,5 @@ paket-files/
 
 # Local History for Visual Studio
 .localhistory/
+/ClientsManager.Logs/log-20200922.json
+/ClientsManager.Logs/log-20200921.json
