--- a/ClientsManager.WebAPI/appsettings.json
+++ b/ClientsManager.WebAPI/appsettings.json
@@ -1,18 +1,117 @@
 {
-    "Logging": 
-    {
-        "LogLevel": 
-        {
-            "Default": "Error",
-            "Microsoft": "Warning"
-        },
-        "Debug": 
-        {
-            "LogLevel": 
+    "ConnectionStrings": {
+        "ClientsManagerDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ClientsManager;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Debug", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+        "WriteTo": [
+            { "Name": "Console" },
+            { "Name": "Debug" },
             {
-                "Default": "Information",
-                "Microsoft.Hosting": "Trace"
+                "Name": "File",
+                "Args": {
+                    "path": "..\\ClientsManager.Logs\\log-.json",
+                    "rollingInterval": "Day",
+                    "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+                }
+            },
+            {
+                "Name": "MSSqlServer",
+                "Args": {
+                    "connectionString": "Server=(localdb)\\mssqllocaldb;Database=ClientsManager;Trusted_Connection=True;MultipleActiveResultSets=true",
+                    //"connectionString": "ConnectionStrings:ClientsManagerDBConnectionString",
+                    "sinkOptionsSection": {
+                        "tableName": "Logs",
+                        "schemaName": "EventLogging",
+                        "autoCreateSqlTable": true
+                    },
+                    "restrictedToMinimumLevel": "Error",
+
+
+
+                    "columnOptionsSection": {
+                        "disableTriggers": true,
+                        "clusteredColumnstoreIndex": false,
+                        "primaryKeyColumnName": "Id",
+                        //"addStandardColumns": [ "LogEvent" ],
+                        "removeStandardColumns": [ "MessageTemplate", "Properties" ],
+                        "id": { "nonClusteredIndex": true },
+                        "level": {
+                            "columnName": "Severity",
+                            "storeAsEnum": false
+                        },
+                        "timeStamp": {
+                            "columnName": "Timestamp",
+                            "convertToUtc": false
+                        },
+                        //"logEvent": {
+                        //    "excludeAdditionalProperties": true,
+                        //    "excludeStandardColumns": true
+                        //},
+                        "additionalColumns": [
+                            {
+                                "ColumnName": "LogData",
+                                "PropertyName": "logData",
+                                "DataType": "nvarchar",
+                                "DataLength": 250
+                            }
+                            //,
+                            //{
+                            //    "ColumnName": "Path",
+                            //    "PropertyName": "logData.Path",
+                            //    "DataType": "nvarchar",
+                            //    "DataLength": 250
+                            //},
+                            //{
+                            //    "ColumnName": "Verb",
+                            //    "PropertyName": "Path",
+                            //    "DataType": "nvarchar",
+                            //    "DataLength": 250
+                            //},
+                            //{
+                            //    "ColumnName": "Route",
+                            //    "PropertyName": "route",
+                            //    "DataType": "nvarchar",
+                            //    "DataLength": 250
+                            //},
+                            //{
+                            //    "ColumnName": "User",
+                            //    "PropertyName": "reqUser",
+                            //    "DataType": "nvarchar",
+                            //    "DataLength": 250
+                            //}
+                        ]
+                    }
+
+
+
+                }
             }
+        ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "Enrich": [ "FromLogContext", "WithMachineName" ], //, "WithProcessId", "WithThreadId" ],
+        "Destructure": [
+            {
+                "Name": "ToMaximumDepth",
+                "Args": { "maximumDestructuringDepth": 4 }
+            },
+            {
+                "Name": "ToMaximumStringLength",
+                "Args": { "maximumStringLength": 100 }
+            },
+            {
+                "Name": "ToMaximumCollectionCount",
+                "Args": { "maximumCollectionCount": 10 }
+            }
+        ],
+        "Properties": {
+            "Application": "ClientsManager"
         }
     },
     "AllowedHosts": "*"
