--- a/ClientsManager.WebAPI/appsettings.json
+++ b/ClientsManager.WebAPI/appsettings.json
@@ -1,7 +1,4 @@
 {
-    "ConnectionStrings": {
-        "ClientsManagerDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ClientsManager;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
     "Serilog": {
         "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Debug", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
         "WriteTo": [
@@ -18,17 +15,13 @@
             {
                 "Name": "MSSqlServer",
                 "Args": {
-                    "connectionString": "Server=(localdb)\\mssqllocaldb;Database=ClientsManager;Trusted_Connection=True;MultipleActiveResultSets=true",
-                    //"connectionString": "ConnectionStrings:ClientsManagerDBConnectionString",
+                    "connectionString": "ClientsManagerDBConnectionString", //from secrets
                     "sinkOptionsSection": {
                         "tableName": "Logs",
                         "schemaName": "EventLogging",
                         "autoCreateSqlTable": true
                     },
                     "restrictedToMinimumLevel": "Error",
-
-
-
                     "columnOptionsSection": {
                         "disableTriggers": true,
                         "clusteredColumnstoreIndex": false,
@@ -61,30 +54,9 @@
                             //    "PropertyName": "logData.Path",
                             //    "DataType": "nvarchar",
                             //    "DataLength": 250
-                            //},
-                            //{
-                            //    "ColumnName": "Verb",
-                            //    "PropertyName": "Path",
-                            //    "DataType": "nvarchar",
-                            //    "DataLength": 250
-                            //},
-                            //{
-                            //    "ColumnName": "Route",
-                            //    "PropertyName": "route",
-                            //    "DataType": "nvarchar",
-                            //    "DataLength": 250
-                            //},
-                            //{
-                            //    "ColumnName": "User",
-                            //    "PropertyName": "reqUser",
-                            //    "DataType": "nvarchar",
-                            //    "DataLength": 250
                             //}
                         ]
                     }
-
-
-
                 }
             }
         ],
