--- a/ClientsManager.WebAPI/ClientsManager.WebAPI.csproj
+++ b/ClientsManager.WebAPI/ClientsManager.WebAPI.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.5.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
