Added secrets.json config to appsettings.json for GitHub safe-keeping

--- a/ClientsManager.WebAPI/appsettings.json
+++ b/ClientsManager.WebAPI/appsettings.json
@@ -1,90 +1,125 @@
 {
-    "Serilog": {
-        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Debug", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
-        "WriteTo": [
-            { "Name": "Console" },
-            { "Name": "Debug" },
-            {
-                "Name": "File",
-                "Args": {
-                    "path": "..\\ClientsManager.Logs\\log-.json",
-                    "rollingInterval": "Day",
-                    "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
-                }
-            },
-            {
-                "Name": "MSSqlServer",
-                "Args": {
-                    "connectionString": "ClientsManagerDBConnectionString", //from secrets
-                    "sinkOptionsSection": {
-                        "tableName": "Logs",
-                        "schemaName": "EventLogging",
-                        "autoCreateSqlTable": true
-                    },
-                    "restrictedToMinimumLevel": "Error",
-                    "columnOptionsSection": {
-                        "disableTriggers": true,
-                        "clusteredColumnstoreIndex": false,
-                        "primaryKeyColumnName": "Id",
-                        //"addStandardColumns": [ "LogEvent" ],
-                        "removeStandardColumns": [ "MessageTemplate", "Properties" ],
-                        "id": { "nonClusteredIndex": true },
-                        "level": {
-                            "columnName": "Severity",
-                            "storeAsEnum": false
-                        },
-                        "timeStamp": {
-                            "columnName": "Timestamp",
-                            "convertToUtc": false
-                        },
-                        //"logEvent": {
-                        //    "excludeAdditionalProperties": true,
-                        //    "excludeStandardColumns": true
-                        //},
-                        "additionalColumns": [
-                            {
-                                "ColumnName": "LogData",
-                                "PropertyName": "logData",
-                                "DataType": "nvarchar",
-                                "DataLength": 250
-                            }
-                            //,
-                            //{
-                            //    "ColumnName": "Path",
-                            //    "PropertyName": "logData.Path",
-                            //    "DataType": "nvarchar",
-                            //    "DataLength": 250
-                            //}
-                        ]
-                    }
-                }
-            }
-        ],
-        "MinimumLevel": {
-            "Default": "Information",
-            "Override": {
-                "Microsoft": "Warning",
-                "System": "Warning"
-            }
-        },
-        "Enrich": [ "FromLogContext", "WithMachineName" ], //, "WithProcessId", "WithThreadId" ],
-        "Destructure": [
-            {
-                "Name": "ToMaximumDepth",
-                "Args": { "maximumDestructuringDepth": 4 }
-            },
-            {
-                "Name": "ToMaximumStringLength",
-                "Args": { "maximumStringLength": 100 }
-            },
-            {
-                "Name": "ToMaximumCollectionCount",
-                "Args": { "maximumCollectionCount": 10 }
-            }
-        ],
-        "Properties": {
-            "Application": "ClientsManager"
-        }
+  "ConnectionStrings": {
+    "ClientsManagerDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ClientsManagerDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TestsDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ClientsManagerTestDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "SecretKey": "1e2fd531-f848-46e6-93a7-6914634af58e",
+    "Issuer": "https://localhost:44332/", //The server/application that issues the token
+    "Audience": "https://localhost:3000/", //The consuming client app that accesses the API
+    "ExpirationInMinutes": 60
+  },
+  "AzureAd": {
+    "ClientId": "de688694-3dea-4f9a-8953-47937fe5664f",
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "051c8d61-78e1-4f4a-a321-d7b21d563b7c",
+    "APIApplicationIdUri": "api://de688694-3dea-4f9a-8953-47937fe5664f",
+    "ClientAudience": "ec34d678-0e1e-4797-8464-422d6347eee3", //this claim identifies the audience for this token. This is the intended recipient(s) for this token.
+    "APIAudience": "de688694-3dea-4f9a-8953-47937fe5664f" //this claim identifies the audience for this token. This is the intended recipient(s) for this token.
+  },
+  "Swagger": {
+    "SwaggerUIEndpoint": "/swagger/v1/swagger.json",
+    "ApiVersion": "v1",
+    "ApiTitle": "ClientsManager API",
+    "Description": "ClientsManager API is an API to manage CLients and LegalCases",
+    "TermsOfService": "https://www.google.com/",
+    "Contact": {
+      "Name": "John Doe",
+      "Email": "johndoe@todochange.com",
+      "Url": "https://www.google.com/"
     },
-    "AllowedHosts": "*"
+    "License": {
+      "Name": "License Name",
+      "Url": "https://www.google.com/"
+    }
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Debug", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "Debug" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "..\\ClientsManager.Logs\\log-.json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "ClientsManagerDBConnectionString", //from secrets
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            "schemaName": "EventLogging",
+            "autoCreateSqlTable": true
+          },
+          "restrictedToMinimumLevel": "Error",
+          "columnOptionsSection": {
+            "disableTriggers": true,
+            "clusteredColumnstoreIndex": false,
+            "primaryKeyColumnName": "Id",
+            //"addStandardColumns": [ "LogEvent" ],
+            "removeStandardColumns": [ "MessageTemplate", "Properties" ],
+            "id": { "nonClusteredIndex": true },
+            "level": {
+              "columnName": "Severity",
+              "storeAsEnum": false
+            },
+            "timeStamp": {
+              "columnName": "Timestamp",
+              "convertToUtc": false
+            },
+            //"logEvent": {
+            //    "excludeAdditionalProperties": true,
+            //    "excludeStandardColumns": true
+            //},
+            "additionalColumns": [
+              {
+                "ColumnName": "LogData",
+                "PropertyName": "logData",
+                "DataType": "nvarchar",
+                "DataLength": 250
+              }
+              //,
+              //{
+              //    "ColumnName": "Path",
+              //    "PropertyName": "logData.Path",
+              //    "DataType": "nvarchar",
+              //    "DataLength": 250
+              //}
+            ]
+          }
+        }
+      }
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName" ], //, "WithProcessId", "WithThreadId" ],
+    "Destructure": [
+      {
+        "Name": "ToMaximumDepth",
+        "Args": { "maximumDestructuringDepth": 4 }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": { "maximumStringLength": 100 }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": { "maximumCollectionCount": 10 }
+      }
+    ],
+    "Properties": {
+      "Application": "ClientsManager"
+    }
+  },
+  "AllowedHosts": "*"
 }
