--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,3 +45,9 @@ steps:
     arguments: '--configuration $(buildConfiguration)  --output $(Build.ArtifactStagingDirectory)'
   displayName: 'ClientsManager API Publish'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+    arguments: '--configuration $(buildConfiguration)  --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
