--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,13 +43,8 @@ steps:
     command: 'publish'
     publishWebProjects: true
     arguments: '--configuration $(buildConfiguration)  --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
   displayName: 'ClientsManager API Publish'
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'publish'
-    publishWebProjects: true
-    arguments: '--configuration $(buildConfiguration)  --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
-
-- task: PublishBuildArtifacts@1
+#take all the files in $(Build.ArtifactStagingDirectory) and upload them as an artifact of your build
+#- task: PublishBuildArtifacts@1
