--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,3 +46,7 @@ steps:
 
 #take all the files in $(Build.ArtifactStagingDirectory) and upload them as an artifact of your build
 - task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
