--- a/ClientsManager.WebAPI/ClientsManager.WebAPI.csproj
+++ b/ClientsManager.WebAPI/ClientsManager.WebAPI.csproj
@@ -6,8 +6,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\rodrigohervas\source\repos\ClientsManager\ClientsManager.WebAPI\ClientsManager.WebAPI.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\rodrigohervas\source\repos\ClientsManger\ClientsManager.WebAPI\ClientsManager.WebAPI.xml</DocumentationFile>
     <NoWarn>1701;1702;1591;1570</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Users\rodrigohervas\source\repos\ClientsManager\ClientsManager.WebAPI\ClientsManager.WebAPI.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
